# something

./: .dockerignore  .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  README.md  angular.json  decorate-angular-cli.js  migrations.json  nx.json  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: commit-checks.yml  version.yml
.insomnia/ApiSpec/: spc_e3cf6f2508e940cea5409c766e72b0de.yml
.insomnia/Environment/: env_a6f50487efb356f21b6b4d7e23a86d0bd0b3d24c.yml  env_e2d184e833da46dc8eaef839f09557e4.yml
.insomnia/Request/: req_14e20aad899e4984820ca5bdb6c33328.yml  req_39e55bbb3f2941a28675850936072283.yml  req_3fe78ad85ba84ed282cd48f6e2f04a2d.yml  req_a499796513264d79ae7b477f2f75547d.yml
.insomnia/UnitTestSuite/: uts_e89f2f28ad5046d380b6040a9b9400d7.yml
.insomnia/Workspace/: wrk_bf5e66bee54b4e19aa0a66d7dfef4bdb.yml
apps/something/: .env.template  CHANGELOG.md  Cargo.toml  dockerfile  jest.config.js  project.json  rocket.toml  rustfmt.toml
apps/something/migrations/2022-06-24-155335_create_items_and_orders/: down.sql  up.sql
apps/something/migrations/add_items_and_orders/: up.sql
apps/something/src/: main.rs  schema.rs
apps/something/src/api/: add_item.rs  checkout.rs  get_items.rs  mod.rs
apps/something/src/app/: app.component.ts
apps/something/src/enums/: mod.rs  response_code.rs
apps/something/src/enums/stripe/: error_type.rs  mod.rs
apps/something/src/middleware/: mod.rs
apps/something/src/models/: generic_response.rs  mod.rs
apps/something/src/models/db/: item.rs
compose/: docker-compose.yml
libs/utils/: README.md  (+4 more)
(+140 files in other folders)
