[package]
name = "something"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
reqwest = { version = "0.11", features = ["json"] }
strum = { version = "0.24", features = ["derive"] }
dotenv = "0.15.0"
serde = "1.0"
cuid = "1.2.0"