[package]
name = "something"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
diesel = { version = "1.4.8", features = ["mysql"] }
diesel_migrations = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
strum = { version = "0.24", features = ["derive"] }
dotenv = "0.15.0"
serde = "1.0"
cuid = "1.2.0"
rust_decimal = {version = "1.22.0", features = ["db-diesel-mysql"]}

openssl-sys = "*"


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_mysql_pool"]

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]